--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
   box-shadow:3px 1px 4px 10px whitesmoke;
   margin:60px 40px 30px 50px;
 }
+
 .footer{
   height:50px;
   background-color: rgb(11,105,191);
@@ -23,8 +24,11 @@
 .full-height{
   height:82vh;
 }
-.menu-link{
-  
+.menu-link .menuLink{
+    border:1px solid red;
+    text-decoration: none;
+    color:black;
+    
 }
 .sidebar{
   border:1px solid red;
